--- a/index.css
+++ b/index.css
@@ -51,6 +51,18 @@ i:hover {
     margin-right: 1px;   
 }
 
+.first-mobile {
+    display: none;
+    flex-direction: column;
+    background-color: rgb(17, 16, 16);
+    border-bottom: 3px solid #870d19;
+    border-bottom: 3px solid #1b95cf;
+    border-bottom: 3px solid white;
+    width: 100vw;
+    height: 100%;
+    margin-right: 1px;   
+}
+
 .heading {
     border-top-right-radius: 10px;
     height: 10%;
@@ -64,6 +76,22 @@ i:hover {
     font-family: 'Kalam', cursive;
     font-size: 1.3rem;
 }
+
+.headingmobile {
+    border-top-right-radius: 10px;
+    height: 10%;
+    width: 100%;
+    color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Kalam', cursive;
+    font-size: 1.3rem;
+    display: none;
+}
+
 
 #navbar {
     display: flex;
@@ -539,8 +567,8 @@ i:hover {
     right: 0;
     width: 20%;
     display: flex;
-    margin: 1%;
-    margin-top: 2.7%;
+    margin-right: 1%;
+    margin-top: 1%;
     justify-content: center;
     flex-direction: row;
     align-items: center;
@@ -548,7 +576,7 @@ i:hover {
 }
 
 .volumebar i{
-    margin: auto 6%;
+    /* margin: auto 6%; */
     background-color: #1b95cf;
     font-size: 1rem;
 }
@@ -564,7 +592,8 @@ i:hover {
 }
 
 #volumeLogo {
-    margin-right: 0;
+    /* margin-right: 25%; */
+    margin-right: 1rem;
     cursor: pointer;
 }
 
@@ -619,6 +648,7 @@ i:hover {
 }
 
 #repeaticon {
+    margin: auto 6%;
     font-size: 1rem;
 }
 
@@ -787,3 +817,183 @@ i:hover {
 }
 
 /* **********************************ADD TO LIBRARY POPUP ENDS*************************************** */
+
+
+
+.headersection {
+    display: none;
+}
+
+.mobilesearch {
+    display: none;
+    background-color: #000;
+}
+
+
+
+
+/* ****************************** media query responsive ********************************* */
+
+
+@media screen and (max-width: 800px) {
+    
+    .first-section {
+        width: 20%;
+    }
+    
+    .songs {
+        width: 80%;
+    }
+
+    .now-playing {
+        display: none;
+    }
+
+    .footersong {
+        display: none;
+    }
+
+    .controls {
+        width: 100vw;
+    }
+    
+    .timebar {
+        width: 80vw;
+    }
+
+}
+
+@media screen and (max-width: 576px) {
+
+    .first-section {
+        /* height: 20vh; */
+        display: none;
+    }
+
+    .first-mobile {
+        display: block;
+        width: 100vw;
+    }
+    /* .header:after {
+
+        background-color: white;
+        content: "Joe's Task: ";
+        color: black;
+    }
+
+    .header {
+        height: 5bh;
+    } */
+
+    .header {
+        display: none;
+    }
+
+    .body {
+        /* flex-direction: column; */
+        height: 60vh;
+    }
+
+    .heading {
+        display: none;
+    }
+
+    .headingmobile {
+        height: 15vw;
+        width: 100vw;
+        display: block;
+        display: flex;
+        background-color: #1b95cf;
+        border-radius: 0;
+        /* margin-bottom: 2%; */
+    }
+
+    .songs {
+        /* width: 100%; */
+        width: 100vw;
+        padding: auto 50%;
+        /* margin: auto; */
+    }
+
+    .name {
+        border-radius: 0;
+        display: none;
+    }
+
+    .now-playing {
+        display: none;
+    }
+
+    .footer {
+        height: 20vh;
+        width: 100vw;
+        padding: 0;
+    }
+
+    .footersong {
+        display: none;
+    }
+
+    .controls {
+        width: 100vw;
+    }
+    
+    .timebar {
+        width: 80%;
+    }
+
+    .volumebar {
+        width: 25%;
+    }
+
+    #volumeLogo {
+        margin-right: 25%;
+    }
+
+    #navbar {
+        flex-direction: row;
+        width: 100vw;
+        /* height: 50%; */
+        background-color: green;
+        margin: 0;
+    }
+
+    .navbar-button {
+        margin: 0 5%;
+        background-color: red;
+        height: auto;
+        padding: 0;
+
+
+    }
+
+    #searchbar {
+        border-radius: 0;
+        margin-left: 1%;
+        /* width: 120px; */
+        justify-content: center;
+        align-items: center;
+    }
+
+    #searchbaricon {
+        font-size: 1.5rem;
+        height: 100%;
+        background-color: yellow;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        display: flex;
+        padding: 0 1rem;
+    }
+
+    .mobilesearch {
+        display: block;
+    }
+
+    /* .headersection {
+        display: block;
+        display: flex;
+        flex-direction: column;
+    } */
+}
