--- a/index.css
+++ b/index.css
@@ -832,7 +832,7 @@ i:hover {
     }
 
     .body {
-        height: 87vh;
+        height: 80vh;
         /* width: 100vw; */
         background-color: white;
     }
@@ -847,7 +847,9 @@ i:hover {
         width: 100vw;
         /* width: 99%; */
         /* background-color: green; */
-        background-color: white;
+        /* background-color: white; */
+        /* background-color: black; */
+        /* background-color: #1b95cf; */
         margin: 0;
         /* height: 88vh; */
         /* height: 0%; */
@@ -855,13 +857,17 @@ i:hover {
 
     .songs-section {
         background-color: white;
+        background-color: black;
         width: 100%;
-        width: 99%;
+        width: 92%;
         /* padding: 30%; */
+        border-right: 5px solid black;
     }
 
     .name {
         border-radius: 0;
+        background-color: #1b95cf;
+        color: white;
     }
 
     .now-playing {
@@ -871,7 +877,8 @@ i:hover {
     }
 
     .footer {
-        height: 13vh;
+        height: 20vh;
+        justify-content: flex-start;
     }
 
     .footersong {
@@ -879,18 +886,91 @@ i:hover {
     }
 
     .cards {
-        margin-bottom: 70px;
+        /* margin-bottom: 70px; */
         background-color: white;
+        background-color: green;
+        background-color: black;
+        /* background-color: #1b95cf; */
+        border-radius: 20px;
+        border: 1px solid white;
     }
 
 
     .row {
-        padding: 9%;
+        padding-left: 5%;
+        padding-right: 5%;
         background-color: white;
+        background-color: #000;
     }
 
     .volumebar {
         display: none;
     }
 
+    .card-img-top {
+        display: none;
+    }
+
+    .duration {
+        display: none;
+    }
+
+    .music-name {
+        width: 100%;
+        /* background-color: #1b95cf; */
+    }
+    .song-info {
+        border-radius: 10px;
+        width: 100%;
+        /* padding: 0; */
+        height: auto;
+        background-color: #1b95cf;
+    }
+
+    .playVisible {
+        visibility: visible;
+        /* right: 0;
+        margin: 5%; */
+    }
+
+    .masterPlayCover {
+        right: 0;
+        margin: 3%;
+    }
+
+    .cards i {
+        font-size: 35px;
+    }
+
+    .timebar {
+        width: 90%;
+    }
+
+    .controls .smallicon{
+        font-size: 1.3rem;
+        margin: 10px;
+    }
+
+    #masterPlay {
+        font-size: 2.7rem;
+    }
+
+    .controls {
+        margin-top: 9px;
+        margin-bottom: 5px;
+    }
+
+    #myProgressBar {
+        height: 4px;
+    }
+
+    #timerstart {
+        font-size: 0.8rem;
+        margin-right: 10px;
+    }
+
+    #timerend {
+        font-size: 0.8rem;
+        margin-left: 10px;
+    }
 }
