--- a/index.css
+++ b/index.css
@@ -826,6 +826,8 @@ i:hover {
 
 @media only screen and (max-width: 600px) {
 
+    /* html, body { height: 100% } */
+
     .header {
         height: 0;
         display: none;
@@ -833,7 +835,7 @@ i:hover {
 
     .body {
         height: 80vh;
-        /* width: 100vw; */
+        /* width: 90vw; */
         background-color: white;
     }
 
@@ -844,8 +846,8 @@ i:hover {
     }
 
     .songs {
-        width: 100vw;
-        /* width: 99%; */
+        /* width: 100vw; */
+        width: 99%;
         /* background-color: green; */
         /* background-color: white; */
         /* background-color: black; */
@@ -858,8 +860,8 @@ i:hover {
     .songs-section {
         background-color: white;
         background-color: black;
-        width: 100%;
-        width: 92%;
+        /* width: 100%; */
+        width: 82%;
         /* padding: 30%; */
         border-right: 5px solid black;
     }
@@ -878,6 +880,7 @@ i:hover {
 
     .footer {
         height: 20vh;
+        /* width: 100vw; */
         justify-content: flex-start;
     }
 
@@ -918,6 +921,15 @@ i:hover {
     .music-name {
         width: 100%;
         /* background-color: #1b95cf; */
+        background-color: white;
+        color: black;
+        background-color: grey;
+        height: 40px;
+        align-items: center;
+        /* justify-content: center; */
+        text-align: center;
+        display: flex;
+        /* color: white; */
     }
     .song-info {
         border-radius: 10px;
@@ -943,7 +955,8 @@ i:hover {
     }
 
     .timebar {
-        width: 90%;
+        width: 85%;
+        /* background-color: gold; */
     }
 
     .controls .smallicon{
