--- a/index.css
+++ b/index.css
@@ -336,7 +336,7 @@ i:hover {
     justify-content: center;
     align-items: center;
     background-color: transparent;
-    padding: 0;  
+    padding: 0;
 }
 
 .cards:hover :not(.masterPlayCover){
@@ -827,7 +827,11 @@ i:hover {
 /* **********************************ADD TO LIBRARY POPUP ENDS*************************************** */
 
 
-.mobile-firstsection {
+#mobile-firstsection {
+    display: none;
+}
+
+.mobilefooter {
     display: none;
 }
 
@@ -844,7 +848,7 @@ i:hover {
     }
 
     .body {
-        height: 84vh;
+        height: 90vh;
         /* width: 90vw; */
         background-color: white;
     }
@@ -865,6 +869,7 @@ i:hover {
         margin: 0;
         /* height: 88vh; */
         /* height: 0%; */
+        border-bottom: 0;
     }
 
     .songs-section {
@@ -876,7 +881,7 @@ i:hover {
         border-right: 5px solid black;
         justify-content: flex-end;
         /* display: flex; */
-        height: 75%;
+        height: 90%;
         /* background-color: green; */
         padding: 0;
     }
@@ -885,6 +890,7 @@ i:hover {
         border-radius: 0;
         background-color: #1b95cf;
         color: white;
+        background-color: rgb(42, 190, 42);
     }
 
     .now-playing {
@@ -900,7 +906,33 @@ i:hover {
         justify-content: center;
         align-items: center;
         text-align: center;
-        /* display: none; */
+        display: none;
+    }
+
+    .mobilefooter {
+        height: 10vh;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: rgb(17, 17, 17);
+        /* background-color: rgb(42, 190, 42); */
+        /* background-color: rgb(214, 77, 35); */
+    
+    }
+
+    .mobilefooter div {
+        background-color: rgb(17, 17, 17);
+        /* background-color: rgb(42, 190, 42); */
+    }
+
+    .mobilefooter i {
+        font-size: 25px;
+        background-color: rgb(17, 17, 17);
+        height: 100%;
+        /* background-color:  */
+        /* background-color: rgb(42, 190, 42); */
+        /* color: #000; */
+        /* cursor: pointer; */
     }
 
     .footersong {
@@ -916,12 +948,13 @@ i:hover {
         border: 1px solid white; */
         /* margin-right: 1px; */
         /* margin-top: 30px; */
-        margin: 10px auto;
+        margin: 14px auto;
         /* border-top-left-radius: 5000px; */
     }
 
     .duration {
         border-bottom: 2px solid #1b95cf;
+        border-bottom: 5px solid rgb(42, 190, 42);
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
     }
@@ -983,7 +1016,7 @@ i:hover {
     }
 
     .playVisible {
-        visibility: visible;
+        /* visibility: visible; */
         /* right: 0;
         margin: 5%; */
     }
@@ -1004,10 +1037,11 @@ i:hover {
     }
 
     .controls .smallicon{
-        font-size: 1.3rem;
+        /* font-size: 1.3rem; */
         /* margin-right: 30px; */
+        /* margin: auto 15px;
+        margin-bottom: 22px; */
         margin: auto 15px;
-        margin-bottom: 22px;
     }
 
     #masterPlay {
@@ -1038,11 +1072,25 @@ i:hover {
         margin-left: 10px;
     }
 
-    .mobile-firstsection {
+    #mobile-firstsection {
         display: block;
-        height: 15%;
+        height: 8%;
         width: 100%;
         background-color: #1b95cf;
         background-color: black;
+        background-color: white;
+        color: black;
+        display: none;
+    }
+
+    .hidemobilesearch {
+        display: none;
+    }
+
+    .searchmobile {
+        background-color: white;
+        color: black;
+        width: 100%;
+        height: 100%;
     }
 }
