--- a/index.css
+++ b/index.css
@@ -848,7 +848,7 @@ i:hover {
     }
 
     .body {
-        height: 90vh;
+        height: 92vh;
         /* width: 90vw; */
         background-color: white;
     }
@@ -883,7 +883,7 @@ i:hover {
         /* display: flex; */
         height: 90%;
         /* background-color: green; */
-        padding: 0;
+        /* padding: 0; */
     }
 
     .name {
@@ -910,7 +910,7 @@ i:hover {
     }
 
     .mobilefooter {
-        height: 10vh;
+        height: 8vh;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -926,7 +926,7 @@ i:hover {
     }
 
     .mobilefooter i {
-        font-size: 25px;
+        font-size: 20px;
         background-color: rgb(17, 17, 17);
         height: 100%;
         /* background-color:  */
@@ -1073,18 +1073,31 @@ i:hover {
     }
 
     #mobile-firstsection {
-        display: block;
+        /* display: block; */
         height: 8%;
         width: 100%;
         background-color: #1b95cf;
         background-color: black;
         background-color: white;
         color: black;
-        display: none;
+        /* display: none; */
+        transition: 0.15s;
     }
 
+    .button-clicked-mobile {
+        color: rgb(42, 190, 42);
+    }
+
+    i:hover {
+        color: rgb(42, 190, 42);
+    }
+
+    .visuallyhidden {
+        opacity: 0;
+      }
+
     .hidemobilesearch {
-        display: none;
+        display: block;
     }
 
     .searchmobile {
