--- a/index.css
+++ b/index.css
@@ -835,6 +835,10 @@ i:hover {
     display: none;
 }
 
+#playingsongmobile {
+    display: none;
+}
+
 /* ****************************** media query responsive ********************************* */
 
 
@@ -848,7 +852,7 @@ i:hover {
     }
 
     .body {
-        height: 92vh;
+        height: 93vh;
         /* width: 90vw; */
         background-color: white;
     }
@@ -910,7 +914,7 @@ i:hover {
     }
 
     .mobilefooter {
-        height: 8vh;
+        height: 7vh;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -1092,6 +1096,14 @@ i:hover {
         color: rgb(42, 190, 42);
     }
 
+.colorRed {
+    color: rgb(42, 190, 42);
+}
+
+.colorDarkblue {
+    color: rgb(42, 190, 42);
+}
+
     .visuallyhidden {
         opacity: 0;
       }
@@ -1105,5 +1117,77 @@ i:hover {
         color: black;
         width: 100%;
         height: 100%;
+    }
+
+    .playingsongmobilediv {
+        height: 9%;
+        width: 100%;
+        background: rgb(2, 26, 6, 0.7);
+        display: flex;
+        flex-direction: column;
+    }
+
+    #playingsongmobile {
+        display: flex;
+        height: 80%;
+        width: 100%;
+        background-color: #494747;
+        /* background-color: rgb(2, 26, 6, 2); */
+        background: rgb(2, 26, 6, 0.7);
+        align-items: center;
+    }
+
+    .progress {
+        /* height: 12%; */
+        height: auto;
+        background-color: red;
+        
+    }
+
+    #myProgressBarMobile {
+        /* height: 100%; */
+        height: 20%;
+        width: 100vw;
+        accent-color: black;
+        background-color: #870d19;
+        /* accent-color: white; */
+    }
+
+    #playingsongmobile img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    padding: 9px;
+    /* margin-left: 20px; */
+    background-color: #494747;
+    background: rgb(2, 26, 6, 0.7);
+    }
+    
+    .footersongname {
+        display: flex;
+        background-color: #494747;
+        background: rgb(2, 26, 6, 0.7);
+        justify-content: center;
+        align-items: center;
+        margin-left: 10px;
+    }
+    
+    #masterSongName {
+        background-color: #494747;
+        background: rgb(2, 26, 6, 0.7);
+        font-size: 1rem;
+        font-family: 'Marcellus', serif;
+        /* font-family: 'Kalam', cursive;
+        font-family: 'Lobster', cursive;
+        font-family: 'Pacifico', cursive;
+        font-family: 'Great Vibes', cursive; */
+        font-family: 'Ubuntu', cursive;
+    }
+
+    .footcovericon {
+        background: rgb(2, 26, 6, 0.7);
+        position: absolute;
+        right: 0;
+        margin-right: 30px;
     }
 }
