--- a/index.css
+++ b/index.css
@@ -1121,7 +1121,7 @@ i:hover {
 
     .playingsongmobilediv {
         height: 9%;
-        width: 100%;
+        width: 100vw;
         background: rgb(2, 26, 6, 0.7);
         display: flex;
         flex-direction: column;
@@ -1129,7 +1129,7 @@ i:hover {
 
     #playingsongmobile {
         display: flex;
-        height: 80%;
+        height: 96%;
         width: 100%;
         background-color: #494747;
         /* background-color: rgb(2, 26, 6, 2); */
@@ -1137,19 +1137,28 @@ i:hover {
         align-items: center;
     }
 
-    .progress {
+    .progresss {
         /* height: 12%; */
-        height: auto;
-        background-color: red;
+        /* height: auto; */
+        display: flex;
+        height: 4%;
+        width: 100vw;
+        /* background-color: red; */
+        background-color: #000;
+        background-color: #494747;
         
     }
 
     #myProgressBarMobile {
         /* height: 100%; */
-        height: 20%;
-        width: 100vw;
-        accent-color: black;
-        background-color: #870d19;
+        height: 100%;
+        /* max-width: 100vw; */
+        /* accent-color: black; */
+        /* background-color: grey; */
+        background-color: white;
+        /* color: black; */
+
+        /* background-color: #870d19; */
         /* accent-color: white; */
     }
 
@@ -1157,7 +1166,8 @@ i:hover {
     max-width: 100%;
     max-height: 100%;
     display: block;
-    padding: 9px;
+    padding: 8px;
+    padding-left: 12px;
     /* margin-left: 20px; */
     background-color: #494747;
     background: rgb(2, 26, 6, 0.7);
