progress bar done

--- a/index.css
+++ b/index.css
@@ -1137,7 +1137,7 @@ i:hover {
         align-items: center;
     }
 
-    .progresss {
+    #progresss {
         /* height: 12%; */
         /* height: auto; */
         display: flex;
