--- a/index.css
+++ b/index.css
@@ -1125,6 +1125,16 @@ i:hover {
         background: rgb(2, 26, 6, 0.7);
         display: flex;
         flex-direction: column;
+        /* position: relative; */
+    }
+
+    .playingsongmobilediv i {
+        margin-left: 9px;
+        height: 100%;
+        align-items: center;
+        /* justify-content: center; */
+        display: flex;
+        background: rgb(2, 26, 6, 0.7);
     }
 
     #playingsongmobile {
@@ -1135,6 +1145,7 @@ i:hover {
         /* background-color: rgb(2, 26, 6, 2); */
         background: rgb(2, 26, 6, 0.7);
         align-items: center;
+        position: relative;
     }
 
     #progresss {
@@ -1163,9 +1174,12 @@ i:hover {
     }
 
     #playingsongmobile img {
-    max-width: 100%;
+    /* max-width: 100%; */
     max-height: 100%;
-    display: block;
+    width: auto;
+    /* height: fit-content;
+    width: fit-content; */
+    /* display: block; */
     padding: 8px;
     padding-left: 12px;
     /* margin-left: 20px; */
@@ -1196,8 +1210,47 @@ i:hover {
 
     .footcovericon {
         background: rgb(2, 26, 6, 0.7);
+        /* background-color: red; */
         position: absolute;
+        /* display: flex;
+        justify-content: end; */
         right: 0;
-        margin-right: 30px;
+        margin-right: 18px;
+        /* margin: 10px; */
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        height: 100%;
+    }
+
+    
+
+    .fa-play {
+        font-size: 1.6rem;
+        /* margin-right: 500px; */
+        /* margin-right: 20px; */
+        /* display: flex; */
+        background: rgb(2, 26, 6, 0.7);
+    }
+
+    #masterPlay {
+        font-size: 2.2rem;
+        /* margin-right: 500px; */
+        /* margin-right: 20px; */
+        /* display: flex; */
+        background: rgb(2, 26, 6, 0.7);
+    }
+
+    .footcovericon i {
+        background: rgb(2, 26, 6, 0.7);
+        margin: 12px;
+        font-size: 1.1rem;
+        height: 90%;
+        /* background-color: red; */
+        margin-top: 12px;
+        /* height: 100%; */
+        /* justify-content: center;
+        align-items: center;
+        display: flex; */
     }
 }
