--- a/index.css
+++ b/index.css
@@ -1215,12 +1215,12 @@ i:hover {
         /* display: flex;
         justify-content: end; */
         right: 0;
-        margin-right: 18px;
+        margin-right: 2px;
         /* margin: 10px; */
         align-items: center;
         justify-content: center;
         display: flex;
-        height: 100%;
+        /* height: 100%; */
     }
 
     
@@ -1234,17 +1234,18 @@ i:hover {
     }
 
     #masterPlay {
-        font-size: 2.2rem;
+        font-size: 2rem;
         /* margin-right: 500px; */
         /* margin-right: 20px; */
         /* display: flex; */
         background: rgb(2, 26, 6, 0.7);
+        margin-top: 4px;
     }
 
     .footcovericon i {
         background: rgb(2, 26, 6, 0.7);
-        margin: 12px;
-        font-size: 1.1rem;
+        margin: auto 2px;
+        font-size: 1rem;
         height: 90%;
         /* background-color: red; */
         margin-top: 12px;
