--- a/index.css
+++ b/index.css
@@ -959,13 +959,15 @@ i:hover {
         /* margin-top: 30px; */
         margin: 14px auto;
         /* border-top-left-radius: 5000px; */
+        /* background-color: rgb(11, 11, 11); */
     }
 
     .duration {
-        border-bottom: 2px solid #1b95cf;
-        border-bottom: 5px solid rgb(42, 190, 42);
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        /* border-bottom: 2px solid #1b95cf; */
+        border-bottom: 3px solid rgb(42, 190, 42);
+        border-radius: 0;
+        /* border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px; */
     }
 
     .col-6 {
@@ -975,11 +977,12 @@ i:hover {
 
 
     .row {
-        padding-left: 5%;
-        padding-right: 5%;
+        padding-left: 0%;
+        padding-right: 0%;
         /* margin-right: 2px; */
         background-color: white;
         background-color: #000;
+        /* background-color: rgb(11, 11, 11); */
     }
 
     .volumebar {
@@ -995,11 +998,13 @@ i:hover {
         /* background-color: black; */
         /* border-top-left-radius: 5000px; */
         /* border-radius: 50px; */
-        border-top-right-radius: 10px;
-        border-top-left-radius: 10px;
+        border-top-right-radius: 0px;
+        border-top-left-radius: 0px;
         /* background-color: #1b95cf; */
         background-color: #000;
         background-color: grey;
+        height: 140px;
+        height: 80px;
     }
 
 
@@ -1009,12 +1014,13 @@ i:hover {
         /* background-color: white; */
         /* color: black; */
         /* background-color: grey; */
-        height: 45px;
+        height: 30px;
         align-items: center;
         /* justify-content: center; */
         text-align: center;
         display: flex;
         /* color: white; */
+        font-size: 0.6rem;
     }
     .song-info {
         border-radius: 10px;
@@ -1225,6 +1231,7 @@ i:hover {
 
     #mobileicon {
         /* background-color: #14bbf3; */
+        background: rgb(2, 26, 6, 0.7);
         font-size: 0.85rem;
         margin: auto 5px;
         margin-right: 17px;
