--- a/index.css
+++ b/index.css
@@ -1146,3 +1146,15 @@ i:hover {
         flex-direction: column;
     }
 }
+
+
+@media only screen and (min-width: 600px) and (max-width: 1000px) {
+    .now-playing {
+        display: none;
+    }
+
+    .songs {
+        width: 82%; 
+        border-right: none;
+    }
+}
